@@ -1,1 +1,1 @@
-EXTRA_DIST = config.rpath depcomp install-sh link-warning.h missing texinfo.tex
+EXTRA_DIST = config.rpath depcomp install-sh link-warning.h missing texinfo.tex glew.m4
