@@ -41,12 +41,11 @@ cvtool_SOURCES = cvtool.c 	\
 	cmd_visualize.c
 
 cvtool_LDADD = $(top_builddir)/cvl/libcvl.la		\
-	$(GL_LIBS) $(CAIRO_LIBS) $(LTLIBICONV)		\
+	$(LTLIBGLEW) $(LTLIBCAIRO) $(LTLIBICONV)		\
 	$(top_builddir)/mhlib/libmh.la			\
 	$(top_builddir)/gnulib/libgnu.la
 
 AM_CPPFLAGS = \
 	-I$(top_builddir)/gnulib -I$(top_srcdir)/gnulib	\
 	-I$(top_srcdir)/mhlib				\
-	-I$(top_builddir)/cvl/cvl -I$(top_srcdir)/cvl	\
-	$(CAIRO_CPPFLAGS)
+	-I$(top_builddir)/cvl/cvl -I$(top_srcdir)/cvl
